:whale: 减少玩家新建连接时 handler 的数量，同一游戏对外服共享相关 Handler